syntax = "proto3";

option csharp_namespace = "OwnProtos";

package Customer;

service GrpcCustomer{
    rpc GetAll (Empty) returns (CustomerList);
    rpc GetCustomer (IDRequest) returns (Customer);
}

message Empty{}

message IDRequest{
    string id = 1;
}

message CustomerList{
    repeated Customer Customers = 1;    
}

message Customer{
    string id = 1;
    string name = 2;
    string address = 3;
}